--- a/.github/workflows/action.yaml
+++ b/.github/workflows/action.yaml
@@ -1,6 +1,12 @@
 name: deploy
 
-on: [push, pull_request]
+on:
+  push:
+    paths-ignore:
+      - '**/README.md'
+  pull_request:
+    paths-ignore:
+      - '**/README.md'
 
 jobs:
   build:
